--- a/Libro.tex
+++ b/Libro.tex
@@ -254,144 +254,40 @@ John Watson nel 1920 indusse in un neonato di nome Albert la fobia per i ratti b
 idrocefalia.\endnote{\raggedright\url{https://www.stateofmind.it/2016/01/il-piccolo-albert-esperimento-psicologia/}}. Watson dimostrò come le emozioni umane possono essere condizionate, nonostante il controverso esperimento sollevò numberosi problemi etici, du cui possiamo ancora trovare brevi filmati\endnote{\raggedright\url{https://www.youtube.com/watch?v=FMnhyGozLyE}}. 
 \end{mdframed}
 
-
-
-
-
-
-
-
 \subsection{Metodo Scientifico}
-Siccome ciò che sappiamo sul mondo che ci circonda, su noi stessi, sulle idee che ci siamo fatti, passa attraverso
-la mente e, la nostra capacità cognitiva può essere vittima di tante distorsioni, come facciamo ad avere un idea su una
-questione?
-
-In aiuto ci viene un metodo, chiamato metodo scientifico. Non mi soffermerò troppo sui vari passaggi che abbiamo
-imparato a scuola: osservazione, ricerca, ipotesi, esperimento, analisi, ma del perché sia così efficace. Il metodo scientifico non stabilisce verità assolute, ma produce modelli sempre più precisi e aggiornati. Nuove ricerche possono a volte correggere, raffinare o, più raramente, invalidare risultati precedenti.
-
-Perché Fidarsi del Metodo Scientifico? 
+Abbiamo visto solo alcuni dei modi in cui la mente potrebbe distorcere la realtà, quindi come possiamo tentare di contenere questo errore?
+Esiste un metodo, che seppur non sia perfetto, è il migliore che abbiamo trovato fin'ora. Il metodo scientifico non stabilisce verità assolute, ma produce modelli sempre più precisi della realtà. Di seguito vorrei trasmettere del perchè è così affidabile e migliore rispetto ad altri metodi, che non avendo gli stessi controlli, non consentono una simile robustezza.
 
 \begin{itemize}
-\item Ripetibilità: La scienza invita alla verifica. Se un esperimento può essere ripetuto con gli stessi risultati,
-questo rafforza la fiducia nei suoi risultati.
+\item Ripetibilità: Se un esperimento può essere ripetuto con gli stessi risultati, questo rafforza la fiducia delle conclusioni.
 \item Trasparenza: I metodi e i dati sono aperti, permettendo a chiunque di esaminare e contestare le conclusioni.
-\item Falsificabilità: Una teoria scientifica deve poter essere dimostrata falsa. Se non può essere messa alla prova, non è scienza. 
-
+\item Falsificabilità: Una teoria scientifica deve poter essere messa alla prova e dimostrata eventualmente falsa.
 \begin{itemize}
-\item Esempio di teoria falsificabile: “tutti i cigni sono bianchi”. Questa è una teoria che può essere facilmente messa
-alla prova: l'osservazione di un solo cigno nero sarebbe sufficiente a falsificarla.
-\item Esempio di teoria non falsificabile: “esistono alieni in una galassia lontana 1000 anni luce dalla Terra”. Questa
-affermazione non è attualmente testabile con la tecnologia esistente e non c'è modo di progettare
-un esperimento che possa confermare o smentire la presenza di vita aliena in quella specifica galassia.
+\item Esempio di teoria falsificabile: “tutti i cigni sono bianchi”. Questa è una teoria che può essere facilmente messa alla prova: l'osservazione di un cigno nero la falsificherebbe.
+\item Esempio di teoria non falsificabile: “esistono alieni in una galassia lontana 1000 anni luce dalla Terra”. Questa affermazione non è attualmente dimostrabile con la tecnologia esistente. Nessun esperimento può confermare o smentire questa teoria.
 \end{itemize}
-\item Peer Review: Prima della pubblicazione, la ricerca è sottoposta a un rigoroso processo di revisione da parte di
-esperti anonimi, con l’obiettivo di filtrare studi metodologicamente deboli.
-\end{itemize}
-Quest'ultimo punto in particolare da molta forza al metodo. Abbiamo visto spesso durante gli anni,
-anche con la pandemia di Covid 19 che alcuni medici, scienziati, premi nobel esprimere opinioni che divergono dal consenso scientifico predominante. Questo per i bias che abbiamo visto prima, un singolo scienziato può commettere errori, mentre
-diversi ricercatori, di diverse realtà come laboratori o università, se arrivano alle stesse conclusioni con gli
-stessi esperimenti, possono abbattere significativamente l'errore umano. In molte riviste scientifiche viene usato il sistema di peer review double-blind, dove né autori né revisori conoscono le rispettive identità, per ridurre bias e conflitti d’interesse o di corruzione. Tuttavia, non tutte le pubblicazioni adottano questo modello.
-
-\begin{mdframed}[linewidth=1pt]
-Paradosso di Fermi
-
-Il paradosso di Fermi nasce da questa domanda: se l’universo è così vasto, perché non abbiamo prove dell’esistenza di altre civiltà evolute? L’equazione di Drake cerca di stimare quante forme di vita intelligente potrebbero esistere, ma molti dei suoi parametri sono sconosciuti. Uno studio dell’Università di Oxford\endnote{\raggedright\url{https://arxiv.org/pdf/1806.02404.pdf}}, ha osservato, provando vari valori tratti da distribuzioni realistiche per i parametri sconosciuti della Drake, che esiste una probabilità non trascurabile di trovaci da soli nell’universo osservabile.
-
-La vita complessa dipende da un equilibrio delicatissimo, rendendo il nostro caso forse unico. Per questo, il paradosso di Fermi oggi cerca non tanto quante civiltà esistono, ma perché non le vediamo.
-
-Una teoria suggerisce che le civiltà aliene possano essersi già estinte o non si siano sviluppate nello stesso periodo storico. Un’altra ipotizza che una civiltà molto avanzata possa inconsapevolmente distruggere le altre emergenti, come accade quando un palazzo viene costruito e uccide insetti senza intenzione.
-
-Anche se molti trovano difficile accettare queste conclusioni, i ricercatori hanno tenuto conto della vastità dell’universo sin dall’inizio. La probabilità non è ignorata: è proprio su questa che si fonda la delusione del risultato. Se l’umanità scomparisse, potremmo lasciare l’universo privo di altre forme di vita complesse.
-
-La credenza nei marziani, risale alla fine dell’Ottocento, quando Giovanni Schiaparelli osservò "canali" su Marte. Un errore di traduzione in inglese (da channels a canals) fece immaginare opere artificiali, alimentando il mito di una civiltà aliena.
-
-Alla domanda “Dove sono tutti?”, alcuni rispondono con foto e video. Tuttavia, la maggior parte di queste 'prove' si è dimostrata frutto di errori di interpretazione, falsificazioni o fenomeni naturali. L’esperto Pablo Ayo, in una trasmissione tv, cercava di validare la veridicità potenziale di un immagine. Così l'ho contattato per avere una stima del numero di falsi online, senza però, purtroppo, ricevere risposta. Così ho condotto un piccolo esperimento personale e ho trovato che l’80\% delle immagini analizzate erano chiaramente false, il restante 20\% troppo sfocato per essere valutato.
-
-\needspace{4cm}
-\begin{figure}[H]
-  \begin{minipage}{16cm}
-    \includegraphics[width=16cm]{images/Libro-img053.jpg}
-    \caption{Esempio di come i filtri possono rilevare un falso. Nell'immagine di destra si vede chiaramente un elemento estraneo applicato in un secondo momento all'immagine originaria.}
-  \end{minipage}
-\end{figure}
-
-Esistono video ufficiali diffusi dall’aeronautica statunitense che mostrano oggetti volanti non identificati (UFO), autenticati come reali. Tuttavia, ciò non implica la presenza di alieni, ma semplicemente che si tratta di oggetti non riconosciuti. Secondo Paolo Attivissimo, noto debunker e membro del CICAP, questi video potrebbero essere un modo indiretto per segnalare attività di spionaggio di altre potenze, senza scatenare crisi diplomatiche. In passato, alcuni avvistamenti inizialmente inspiegabili si sono successivamente rivelati essere legati a progetti militari segreti, come nel caso dell’aereo F-117. Anche i militari spesso non conoscono i dettagli dei progetti top secret. In base ai dati del CUN (database italiano), il 3–5\% delle segnalazioni rimane inspiegabile dopo l’indagine, ma questo non implica che siano confermati UFO di origine extraterrestre.
-
-Esistono studi contrastanti a quello dell’Università di Oxford, come quello dell’Università di Nottingham, rielaborando l’equazione di Drake, stima invece l’esistenza di circa 36 civiltà extraterrestri nella Via Lattea \endnote{\raggedright\url{https://iopscience.iop.org/article/10.3847/1538-4357/ab8225}}.
-
-Dove sta la verità? Difficile dirlo con certezza. A volte dobbiamo accettare che certe domande non hanno (ancora) risposta e imparare a convivere con l’incertezza, piuttosto che cercare informazioni che confermino le nostre idee. La conoscenza diviene pertanto un processo in divenire e mai del tutto esaurito.
-\end{mdframed}
-
-Quindi la scienza non ha bias?
-
-No, anche la scienza li ha, facciamo un esempio: Uno studio intende valutare l'efficacia di un
-programma di perdita di peso per persone con diabete. Se lo studio si concentra solo sul numero di partecipanti che
-completano il programma senza considerare altri fattori, come il tasso di abbandono o i cambiamenti nel comportamento
-alimentare, potrebbe portare a conclusioni distorte. Ad esempio, se i partecipanti che non perdono peso tendono ad
-abbandonare il programma e vengono così esclusi dai risultati, mentre quelli che hanno successo continuano, i risultati
-potrebbero essere sbilanciati verso esiti più favorevoli.
-
-Un altro esempio potrebbe essere uno studio sull'uso degli smartphone e i sintomi
-muscoloscheletrici tra gli studenti delle scuole superiori. Se lo studio si basa su dati auto-segnalati dagli studenti
-senza verificare l'accuratezza di tali dati, potrebbe esserci un bias informativo. Gli studenti
-potrebbero sovrastimare o sottostimare il tempo trascorso al telefono, influenzando così i risultati dello studio.
-
-Altre volte il campione utilizzato potrebbe essere troppo piccolo o poco rappresentativo perché prende solo una certa fascia di popolazione ad esempio per età, regione, sesso e così via. Chi più chi meno, siamo influenzati da questo provincialismo culturale, ovvero prendere il proprio piccolo mondo e chiamarlo Il Mondo! Affacciarsi dalla propria finestra e credere che quello sia Il Mondo. Se io sono convinto di qualcosa in base alla mia esperienza diretta, ma tu ne hai una percezione diversa, e nessuno dei due sta mentendo, come possiamo trovare un terreno comune di comprensione, se non attraverso un approccio che integri e valuti una molteplicità di esperienze e dati? Questo è parte del metodo scientifico.
-
-Quindi come facciamo a sapere se una ricerca è affidabile? Soprattutto quando andiamo a leggere di una materia di cui
-non abbiamo competenze?
-
-Per prima cosa cerchiamo un articolo scientifico e per farlo possiamo affidarci a Google Scholar, fatto da Google e con
-il medesimo funzionamento: \url{https://scholar.google.com}
-
-Una volta fatta la ricerca, sulla colonna di sinistra, clicchiamo su “Articoli scientifici”.
-
-I primi risultati tendono a essere quelli che l'algoritmo giudica più pertinenti, e una volta scelto l'articolo che ci interessa esaminiamo
-la rivista. Riviste con un rigoroso processo di revisione paritaria sono generalmente considerate più affidabili, ma
-questo può essere complicato da valutare anche con delle ricerche su Google per un non addetto ai lavori. Esiste un
-indice che ci aiuta in questa analisi che è l'Impact Factor (IF). Questo indice riflette la media
-annuale delle citazioni degli articoli pubblicati negli ultimi due anni in una determinata rivista, ed è spesso
-utilizzato come un indicatore dell'importanza relativa di una rivista nel suo campo; le riviste
-con valori IF più alti sono considerate più importanti o prestigiose e potete trovarli su questo sito: \url{https://exaly.com/journals/if/}
-
-Esistono diversi indicatori alternativi all'Impact Factor per valutare l'importanza e l'influenza di una rivista
-scientifica. Ecco alcuni dei più noti:
-
-\begin{itemize}
-\item SCImago Journal Rank (SJR): Utilizza dati provenienti da Scopus e considera sia il numero di citazioni ricevute
-che il prestigio delle riviste da cui provengono le citazioni. \url{https://www.scimagojr.com/journalrank.php} 
-\item CiteScore: Calcolato anch'esso su dati Scopus, rappresenta il numero medio di citazioni ricevute in un anno da
-articoli pubblicati nei tre anni precedenti.
-\item Source Normalized Impact per Paper (SNIP): Misura l'impatto contestualizzato di una rivista, tenendo conto delle
-caratteristiche del campo di ricerca.
-\item Eigenfactor Score: Basato sul numero di volte in cui gli articoli della rivista sono stati citati negli ultimi
-cinque anni, ma anche sulla "qualità" delle citazioni ricevute.
+\item Peer Review: Prima della pubblicazione, la ricerca è sottoposta a un rigoroso processo di revisione da parte di esperti anonimi, con l’obiettivo di filtrare studi metodologicamente deboli.
 \end{itemize}
 
-Non avendo le competenze per valutare uno studio, possiamo usare come filtro l'autorevolezza della rivista (tramite l'impact score) e il numero di citazioni ad esempio utilizzando Google Scholar. Questi indici non garantiscono la validità assoluta, anche riviste serie possono pubblicare errori e, un articolo può essere citato per essere criticato, ma indicano che la ricerca è stata sottoposta a controlli rigorosi e ha avuto un impatto nel settore. Per un non addetto ai lavori, vedere molte citazioni significa che la comunità scientifica ha analizzato e discusso quel lavoro, rendendolo statisticamente più attendibile di uno studio ignorato o pubblicato su testate minori.
+Può capitare che medici, scienziati, premi nobel, possano esprimere opinioni che divergono dal consenso scientifico predominante. Questo per i bias visti precedentemente. Un singolo scienziato può commettere errori, mentre, con un équipe di ricercatori, la probabilità di scovare l'errore, aumenta. In molte riviste scientifiche viene usato il sistema di peer review double-blind, dove né autori né revisori conoscono le rispettive identità, per ridurre conflitti d’interesse o corruzione. Tuttavia, non tutte le riviste adottano questo modello.
 
-\begin{mdframed}[linewidth=1pt]
-Giornali
-La cronaca andrebbe riformata per ridurre l’enfasi su episodi isolati e aumentare l’attenzione ai dati e ai trend di lungo periodo, così da offrire una rappresentazione più equilibrata della realtà. Ciò che dovrebbe interessarci, e su cui dovremmo concentrare l'attenzione, sono le statistiche e i dati oggettivi riguardanti una determinata area, piuttosto che i singoli episodi di violenza o tragedie personali. Un approccio basato sulle statistiche ci permetterebbe di capire meglio l'andamento della sicurezza pubblica, evidenziando trend e problematiche reali che meritano attenzione collettiva e soluzioni concrete.
+Non tutte le ricerche sono affidabili, alcune selezionano solo i risultati che confermano un ipotesi scartando gli altri. Alcuni si basano su questionari non verificati, altri utilizzano un campione troppo ristretto, o poco rappresentativo (solo una certa fascia di popolazione per età, regione, sesso ecc…)
 
-I criteri quantitativi possono aiutare a bilanciare la rilevanza delle notizie, ma dovrebbero essere integrati con valutazioni qualitative, come il potenziale impatto sociale o il valore informativo dell’evento. Bisognerebbe chiedersi: quante persone sono realmente coinvolte o interessate da questa vicenda? Se la risposta è solo una manciata di persone (ad esempio, un caso isolato di aggressione), potrebbe essere opportuno modulare lo spazio mediatico, pur riconoscendo il valore intrinseco di ogni singola storia. Al contrario, questioni che toccano la vita di milioni di persone, come casi di corruzione politica o temi d'interesse pubblico, meritano maggiore visibilità.
+Quindi come facciamo a sapere se una ricerca è affidabile? Soprattutto su materie di cui non abbiamo competenze?
 
-Si potrebbe obiettare che la cronaca ci informa dei rischi reali che potremmo incontrare. I media però possono talvolta enfatizzare eventi rari, ma emotivamente forti, come gli omicidi, dando un’impressione distorta del rischio reale, mentre fenomeni più comuni, ma letali, come gli incidenti stradali, ricevono spesso meno attenzione proporzionale.
+Possiamo utilizzare Google Scholar, sviluppata da Google e con il medesimo funzionamento: \url{https://scholar.google.com}.
+Dalla colonna di sinistra, possiamo filtrare per “Articoli scientifici”.
+Possiamo vedere su che rivista è stato pubblicato l'articolo. Riviste con un rigoroso processo di revisione paritaria sono generalmente considerate più affidabili, ma questo può essere complicato da valutare. Esiste un indice chiamato Impact Factor (IF) che riflette la media annuale delle citazioni degli articoli pubblicati negli ultimi due anni in una determinata rivista, ed è spesso utilizzato come un indicatore dell'autorevolezza e precisione di una rivista nel suo campo e, potete trovarli su questo sito: \url{https://exaly.com/journals/if/}.
+Altri indicatori simili sono il SCImago Journal Rank (SJR), CiteScore, Source Normalized Impact per Paper (SNIP) e l'Eigenfactor Score.
 
-L’aspetto più subdolo e crudele della cronaca, forse anche in modo involontario, è che finisce per indurre le persone, che vivono in un Paese tra i più sicuri al mondo, a condurre un’esistenza dominata dalla paura.
-\end{mdframed}
+L'autorevolezza della rivista e il numero di citazioni, sono un metodo semplice e veloce per valutare la bontà di uno studio. Non vanno presi però come certezze assolute, in quanto, anche riviste serie possono pubblicare errori. Per un non addetto ai lavori, vedere molte citazioni significa che la comunità scientifica ha analizzato e discusso quel lavoro, rendendolo statisticamente più attendibile di uno studio ignorato o pubblicato su testate minori.
 
-Altri punti:
-\begin{itemize}
-\item Ricerca di conflitti di interesse: Solitamente in fondo alla ricerca vengono citati anche i finanziatori. Se tra i finanziatori di uno studio che osserva benefici di un integratore compaiono aziende che lo producono, è importante valutare con maggiore cautela i risultati, poiché potrebbe esserci un potenziale conflitto d’interessi, anche se ciò non invalida automaticamente le conclusioni dello studio.
-\item Verifica gli autori: Controlla le qualifiche degli autori e la loro affiliazione istituzionale. Gli autori
-rispettabili e le istituzioni rinomate possono aumentare la credibilità della ricerca.
-\item Controlla le citazioni: Uno studio che cita fonti pertinenti e attuali dimostra che gli autori hanno considerato il contesto della loro ricerca.
-\item Analizza i dati e i risultati: I risultati dovrebbero essere presentati in modo chiaro e supportati dai dati.
-Attenzione a qualsiasi affermazione che sembra troppo buona per essere vera o non supportata da prove.
-\item Consulta esperti: Se possibile, discuti la ricerca con colleghi o esperti nel campo per ottenere la loro opinione
-sulla validità dello studio.
-\end{itemize}
+I più scrupolosi potrebbero cercare eventuali conflitti di interesse. Solitamente in fondo alla ricerca vengono citati anche i finanziatori. Se tra i finanziatori di uno studio che non rileva danni significativi indotti dalle sigarette elettroniche, compaiono aziende che le producono, è importante valutare con maggiore cautela i risultati, piochè ciò non conferma o invalida automaticamente le conclusioni dello studio.
+
+
+
+
+
 
 Noterai subito che gli articoli scientifici sono numerosi e in continuo aumento di anno in anno, come posso leggere così
 tante pagine per ogni dubbio che ho? La scienza sta diventando sempre più accessibile, infatti gli articoli sono
@@ -500,6 +396,17 @@ Contrariamente alle aspettative comuni, nonostante le paure moderne, anche la pr
 Con questo non intendo negare l'esistenza di problemi, ma sottolineare l'importanza di evitare di trasformare le singole criticità in generalizzazioni assolute e totalizzanti. Seppur ci siano ancora molte sfide da affrontare, è significativo riconoscere che, in diversi ambiti, la tendenza evidenzi un progresso.
 
 \begin{mdframed}[linewidth=1pt]
+Giornali
+La cronaca andrebbe riformata per ridurre l’enfasi su episodi isolati e aumentare l’attenzione ai dati e ai trend di lungo periodo, così da offrire una rappresentazione più equilibrata della realtà. Ciò che dovrebbe interessarci, e su cui dovremmo concentrare l'attenzione, sono le statistiche e i dati oggettivi riguardanti una determinata area, piuttosto che i singoli episodi di violenza o tragedie personali. Un approccio basato sulle statistiche ci permetterebbe di capire meglio l'andamento della sicurezza pubblica, evidenziando trend e problematiche reali che meritano attenzione collettiva e soluzioni concrete.
+
+I criteri quantitativi possono aiutare a bilanciare la rilevanza delle notizie, ma dovrebbero essere integrati con valutazioni qualitative, come il potenziale impatto sociale o il valore informativo dell’evento. Bisognerebbe chiedersi: quante persone sono realmente coinvolte o interessate da questa vicenda? Se la risposta è solo una manciata di persone (ad esempio, un caso isolato di aggressione), potrebbe essere opportuno modulare lo spazio mediatico, pur riconoscendo il valore intrinseco di ogni singola storia. Al contrario, questioni che toccano la vita di milioni di persone, come casi di corruzione politica o temi d'interesse pubblico, meritano maggiore visibilità.
+
+Si potrebbe obiettare che la cronaca ci informa dei rischi reali che potremmo incontrare. I media però possono talvolta enfatizzare eventi rari, ma emotivamente forti, come gli omicidi, dando un’impressione distorta del rischio reale, mentre fenomeni più comuni, ma letali, come gli incidenti stradali, ricevono spesso meno attenzione proporzionale.
+
+L’aspetto più subdolo e crudele della cronaca, forse anche in modo involontario, è che finisce per indurre le persone, che vivono in un Paese tra i più sicuri al mondo, a condurre un’esistenza dominata dalla paura.
+\end{mdframed}
+
+\begin{mdframed}[linewidth=1pt]
 Fake news e complotti
 
 Anche le cose più semplici, andando a un livello di dettaglio maggiore, sono molto complicate da spiegare o
@@ -562,6 +469,17 @@ Anche il CICAP opera nello stesso campo e ha stilato una serie di
 requisiti\endnote{\raggedright\url{https://www.cicap.org/n/articolo.php?id=273076} } alla ricerca di verificare fenomeni paranormali.
 \end{mdframed}
 
+\begin{mdframed}[linewidth=1pt]
+Paradosso di Fermi
+
+Il paradosso di Fermi nasce da questa domanda: se l’universo è così vasto, perché non abbiamo prove dell’esistenza di altre civiltà evolute? L’equazione di Drake cerca di stimare quante forme di vita intelligente potrebbero esistere, ma molti dei suoi parametri sono sconosciuti. Uno studio dell’Università di Oxford\endnote{\raggedright\url{https://arxiv.org/pdf/1806.02404.pdf}}, ha osservato, provando diversi valori, tratti da distribuzioni realistiche per i parametri sconosciuti della Drake, che esiste una probabilità non trascurabile di trovaci da soli nell’universo osservabile.
+
+La vita complessa dipende da un equilibrio delicatissimo, rendendo il nostro caso forse unico. Se l’umanità scomparisse, potremmo lasciare l’universo privo di altre forme di vita complesse.
+
+Alla domanda “Dove sono tutti?”, alcuni rispondono con foto e video. Tuttavia, la maggior parte di queste 'prove' si è dimostrata frutto di errori di interpretazione, falsificazioni o fenomeni naturali. 
+
+Esistono video ufficiali diffusi dall’aeronautica statunitense che mostrano oggetti volanti non identificati (UFO), autenticati come reali. Tuttavia, ciò non implica la presenza di alieni, ma semplicemente di oggetti non riconosciuti. Nel 97\% dei casi, secondo il CUN, questi fenomeni vengono spiegati e spesso legati ad attività di spionaggio o a progetti militari top secret.
+\end{mdframed}
 
 \begin{mdframed}[linewidth=1pt]
 Ricerca scientifica non equivale a verità
