--- a/Libro.tex
+++ b/Libro.tex
@@ -284,28 +284,9 @@ L'autorevolezza della rivista e il numero di citazioni, sono un metodo semplice 
 
 I più scrupolosi potrebbero cercare eventuali conflitti di interesse. Solitamente in fondo alla ricerca vengono citati anche i finanziatori. Se tra i finanziatori di uno studio che non rileva danni significativi indotti dalle sigarette elettroniche, compaiono aziende che le producono, è importante valutare con maggiore cautela i risultati, piochè ciò non conferma o invalida automaticamente le conclusioni dello studio.
 
+Siccome le pubblicazioni sono numerose, per sapere se potrebbe interessarci una ricerca, possiamo leggere l'abstract o riassunto.
 
-
-
-
-
-Noterai subito che gli articoli scientifici sono numerosi e in continuo aumento di anno in anno, come posso leggere così
-tante pagine per ogni dubbio che ho? La scienza sta diventando sempre più accessibile, infatti gli articoli sono
-strutturati in modo da mettere all'inizio un abstract, che solitamente è fatto da pochi paragrafi,
-che sostanzialmente è un riassunto. Negli ultimi anni sempre più articoli inseriscono gli highlights, che sono i punti
-principali, per renderci ancora più facile e veloce avere un idea di massima di cosa parla
-l'articolo.
-
-Le meta-analisi sono strumenti particolarmente utili quando si vogliono sintetizzare i risultati di più studi su una stessa domanda di ricerca, offrendo una visione più ampia e una stima complessiva più solida. Questo processo statistico valuta
-l'efficacia clinica calcolando una stima combinata ponderata degli interventi, basata su almeno
-due studi separati. Le meta-analisi sono strumenti potenti che possono migliorare la precisione e, in alcuni casi, risolvere controversie
-derivanti da risultati contrastanti e rispondere a domande che non possono essere affrontate da singoli studi. Inoltre,
-aiutano a standardizzare e migliorare la qualità delle revisioni sistematiche attraverso linee guida come la
-dichiarazione PRISMA.
-
-Quindi se leggete un articolo su internet che parla di ricerche, controllate se avete gli estremi di questo studio in
-modo che possiate analizzarlo. In modo da poter essere critici anche quando si parla di numeri e grafici. Un libro che mi ha aiutato a capire quanto anche dati e numeri, se presentati o visualizzati in modo selettivo, possano suggerire interpretazioni fuorvianti, è stato Factfulness\endnote{\raggedright\url{https://www.amazon.it/dp/B07BMN2N6D/}}, dove anche
-valori corretti, se elaborarli o visualizzati in un certo modo, possono far assumere un concetto molto diverso.
+Quando si naviga sul web, numeri e grafici, seppur corretti potrebbero non essere sufficienti e talvolta essere presentati un modo fuorviante, come leggiamo in  Factfulness\endnote{\raggedright\url{https://www.amazon.it/dp/B07BMN2N6D/}}.
 
 \needspace{4cm}
 \vspace{1em}
@@ -314,97 +295,29 @@ valori corretti, se elaborarli o visualizzati in un certo modo, possono far assu
 \end{center}
 \vspace{1em}
 
-Questi tre grafici che ritroviamo sul libro mostrano i risultati di test di matematica divisi tra uomini e donne. Se
-guardiamo il primo grafico, dove sono mostrate le medie dei test di matematica nei vari anni, vediamo che le donne
-conseguono un punteggio decisamente inferiore rispetto agli uomini, ma è davvero così? Spostiamoci sul secondo grafico: i dati sono gli stessi, ma cambiando la scala dell’asse Y da 450–540 a 0–600, la differenza tra i punteggi di uomini e donne appare visivamente molto ridotta. Come vengono presentati i dati può influenzare la percezione, pur non modificando i numeri reali. Factfulness spiega come le medie possano essere fuorvianti. I primi due grafici mostrano i risultati medi di ogni
-anno, mentre nel terzo vediamo tutti i risultati, senza medie, di un solo anno, il 2016. Notiamo come i dati sono quasi
-sovrapponibili, non mostrando significative differenze tra uomini e donne.
+Questi tre grafici che ritroviamo sul libro mostrano i risultati di test di matematica divisi tra uomini e donne. Se guardiamo il primo grafico, dove sono mostrate le medie dei test di matematica nei vari anni, vediamo che le donne conseguono un punteggio decisamente inferiore rispetto agli uomini. Osservando il secondo grafico, i dati sono gli stessi, ma cambiando la scala dell’asse Y da 450–540 a 0–600, la differenza tra i punteggi di uomini e donne appare visivamente molto più ridotta. Questi due grafici mostrano i risultati medi di ogni anno, mentre nel terzo vediamo tutti i risultati, senza medie, di un solo anno, il 2016. Notiamo come i dati sono quasi sovrapponibili, non mostrando significative differenze tra uomini e donne, suggerendo che quando siamo davanti a delle medie, potremmo cercare le distribuzioni.
 
-Quando una storia parla di un divario, creando due gruppi separati con uno spazio nel mezzo, fate attenzione! Spesso la
-realtà non è polarizzata, non c'è bianco o nero, ma una grande zona grigia. Fate attenzione alle
-medie e cercate le dispersioni, potrebbero sovrapporsi e non mostrare le differenze indicate dalle medie. Riconoscete
-quando vengono confrontati due estremi, di gruppi, paesi, persone, sesso, ecc… ci saranno elementi in cima e in
-fondo, ma la verità sta spesso nel mezzo, dove c'è la maggioranza.
 
-Questo libro inoltre, in controtendenza con l'idea ampiamente diffusa che il mondo sta lentamente andando in
-rovina, mostra in realtà una tendenza contraria. Alcuni ricercatori come Max Roser, dell'Università di Oxford tramite
-ourworldindata.org, Anna Rosling Rönnlund, Hans Rosling e Ola Rosling, ci mostrano anni di dati che danno una visione
-del mondo molto più ottimistica sotto vari punti di vista. Vediamone alcuni:
 
-\begin{figure}[H]
-    \centering
-    \begin{subfigure}[t]{0.495\textwidth}
-        \centering
-        \includegraphics[width=1\linewidth]{images/Libro-img006.png}
-        \caption{L'aspettativa di vita è raddoppiata dal 1800 al 2011. 
-        Credits: \raggedright\url{https://ourworldindata.org/grapher/life-expectancy?country=BRA+CHN+IND+TZA+GBR+USA}}
-    \end{subfigure}
-    \hfill
-    \begin{subfigure}[t]{0.495\textwidth}
-        \centering
-        \includegraphics[width=1\linewidth]{images/Libro-img007.png}
-        \caption{L'indice dello sviluppo umano (HDI) è in continua crescita.
-        Credits: \raggedright\url{https://ourworldindata.org/grapher/human-development-index?year=earliest}}
-    \end{subfigure}
-    
-    \vspace{1em}
 
-    \begin{subfigure}[t]{0.495\textwidth}
-        \centering
-        \includegraphics[width=1\linewidth]{images/Libro-img008.png}
-        \caption{Il PIL è in continuo aumento.
-        Credits: \raggedright\url{https://ourworldindata.org/grapher/average-real-gdp-per-capita-across-countries-and-regions}}
-    \end{subfigure}
-    \hfill
-    \begin{subfigure}[t]{0.495\textwidth}
-        \centering
-        \includegraphics[width=1\linewidth]{images/Libro-img009.png}
-        \caption{Migliora la ridistribuzione della ricchezza e l'istruzione.
-        Credits: \raggedright\url{https://ourworldindata.org/global-education\#school-enrollment-and-attendance}}
-    \end{subfigure}
 
-    \vspace{1em}
 
-    \begin{subfigure}[t]{0.495\textwidth}
-        \centering
-        \includegraphics[width=1\linewidth]{images/Libro-img012.png}
-        \caption{Sempre più persone vivono in governi democratici.
-        Credits: \raggedright\url{https://ourworldindata.org/grapher/world-pop-by-political-regime}}
-    \end{subfigure}
-    \hfill
-    \begin{subfigure}[t]{0.495\textwidth}
-        \centering
-        \includegraphics[width=1\linewidth]{images/Libro-img011.png}
-        \caption{La settimana lavorativa è scesa da 60 a 40 ore con più diritti.
-        Credits: \raggedright\url{https://ourworldindata.org/grapher/work-hours-per-week?time=1870..2000\&country=BEL+FRA+ITA+CHE+USA}}
-    \end{subfigure}
-\end{figure}
 
-Secondo diversi indicatori raccolti da fonti come Our World in Data, negli ultimi decenni, in relazione ai grafici, si è osservata una riduzione delle vittime di guerra e atti terroristici su scala globale, e un incremento nella produzione culturale e scientifica. Tuttavia, tendenze come la democrazia e i diritti umani mostrano variazioni significative tra regioni e periodi. Potete trovare numerosi altri indici su
-ourworldindata.org. E altri grafici interessanti su:
 
-www.gapminder.org/tools
-
-www.gapminder.org/data
-
-Mentre un'altra risorsa interessante è:
-https://books.google.com/ngrams
-Ad esempio, cercando il termine ‘omicidio’ su Google Ngram si osserva un aumento della sua frequenza nei testi pubblicati, anche se in molti paesi il tasso reale di omicidi è in calo da anni. Questo suggerisce una potenziale discrepanza tra percezione pubblica e dati oggettivi, anche se le cause di questa discrepanza vanno interpretate con cautela in quanto può essere dovuto anche ad altri fattori (fiction, dibattiti politici, ecc…).
-
-Contrariamente alle aspettative comuni, nonostante le paure moderne, anche la propensione ad aiutare gli sconosciuti è in realtà aumentata negli ultimi cinquant’anni\endnote{\raggedright\url{https://www.eurekalert.org/news-releases/958742}}. Questo fenomeno, potrebbe essere influenzato da altri fattori positivi come l’incremento dell’istruzione, del reddito e  dell’urbanizzazione.
-
-Con questo non intendo negare l'esistenza di problemi, ma sottolineare l'importanza di evitare di trasformare le singole criticità in generalizzazioni assolute e totalizzanti. Seppur ci siano ancora molte sfide da affrontare, è significativo riconoscere che, in diversi ambiti, la tendenza evidenzi un progresso.
 
 \begin{mdframed}[linewidth=1pt]
-Giornali
-La cronaca andrebbe riformata per ridurre l’enfasi su episodi isolati e aumentare l’attenzione ai dati e ai trend di lungo periodo, così da offrire una rappresentazione più equilibrata della realtà. Ciò che dovrebbe interessarci, e su cui dovremmo concentrare l'attenzione, sono le statistiche e i dati oggettivi riguardanti una determinata area, piuttosto che i singoli episodi di violenza o tragedie personali. Un approccio basato sulle statistiche ci permetterebbe di capire meglio l'andamento della sicurezza pubblica, evidenziando trend e problematiche reali che meritano attenzione collettiva e soluzioni concrete.
+Giornali e cronaca
 
-I criteri quantitativi possono aiutare a bilanciare la rilevanza delle notizie, ma dovrebbero essere integrati con valutazioni qualitative, come il potenziale impatto sociale o il valore informativo dell’evento. Bisognerebbe chiedersi: quante persone sono realmente coinvolte o interessate da questa vicenda? Se la risposta è solo una manciata di persone (ad esempio, un caso isolato di aggressione), potrebbe essere opportuno modulare lo spazio mediatico, pur riconoscendo il valore intrinseco di ogni singola storia. Al contrario, questioni che toccano la vita di milioni di persone, come casi di corruzione politica o temi d'interesse pubblico, meritano maggiore visibilità.
+Per la salute di un paese sono utili le statistiche più che i singoli episodi di violenza o tragedie personali. Un criterio che potrebbe essere valutato per filtrare la rilevanza di un articolo, potrebbe interrogarsi su quante persone sono realmente coinvolte o interessate dalla vicenda. Se la risposta è solo una manciata di persone (ad esempio, un caso isolato di aggressione), potrebbe essere opportuno modulare lo spazio mediatico, pur riconoscendo il valore intrinseco di ogni singola storia. Al contrario, questioni che toccano la vita di milioni di persone, come casi di corruzione politica o temi d'interesse pubblico, meritano maggiore visibilità.
 
-Si potrebbe obiettare che la cronaca ci informa dei rischi reali che potremmo incontrare. I media però possono talvolta enfatizzare eventi rari, ma emotivamente forti, come gli omicidi, dando un’impressione distorta del rischio reale, mentre fenomeni più comuni, ma letali, come gli incidenti stradali, ricevono spesso meno attenzione proporzionale.
-
-L’aspetto più subdolo e crudele della cronaca, forse anche in modo involontario, è che finisce per indurre le persone, che vivono in un Paese tra i più sicuri al mondo, a condurre un’esistenza dominata dalla paura.
+L’aspetto più subdolo e involontariamente crudele della cronaca, è che rischia di indurre le persone, che vivono in un Paese sicuro, a condurre un’esistenza dominata dalla paura.
 \end{mdframed}
+
+
+
+
+
+
 
 \begin{mdframed}[linewidth=1pt]
 Fake news e complotti
@@ -4770,6 +4683,59 @@ Anche sulla semplicità di utilizzo, molte funzioni sono più rapide e personali
 
 Infine, la presunta durabilità superiore dei prodotti Apple non è sempre confermata nella pratica. Molti utenti riportano un degrado della batteria già nel primo anno e un calo di performance dopo gli aggiornamenti software. Anche le statistiche sull’assistenza vedono Apple in svantaggio rispetto alla concorrenza.
 \end{mdframed}
+
+\subsection{Speranza}
+
+Prima di concludere, per finire in bellezza, in controtendenza con l'idea che il mondo stia andando in rovina, vorrei condividere con voi alcuni grafici, ma ce ne sono molti altri, che, nonostante i problemi che tutti conosciamo, il mondo sta migliorando sotto tanti aspetti.
+
+\begin{figure}[H]
+    \centering
+    \begin{subfigure}[t]{0.495\textwidth}
+        \centering
+        \includegraphics[width=1\linewidth]{images/Libro-img006.png}
+        \caption{L'aspettativa di vita è raddoppiata dal 1800 al 2011. 
+        Credits: \raggedright\url{https://ourworldindata.org/grapher/life-expectancy?country=BRA+CHN+IND+TZA+GBR+USA}}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[t]{0.495\textwidth}
+        \centering
+        \includegraphics[width=1\linewidth]{images/Libro-img007.png}
+        \caption{L'indice dello sviluppo umano (HDI) è in continua crescita.
+        Credits: \raggedright\url{https://ourworldindata.org/grapher/human-development-index?year=earliest}}
+    \end{subfigure}
+    
+    \vspace{1em}
+
+    \begin{subfigure}[t]{0.495\textwidth}
+        \centering
+        \includegraphics[width=1\linewidth]{images/Libro-img008.png}
+        \caption{Il PIL è in continuo aumento.
+        Credits: \raggedright\url{https://ourworldindata.org/grapher/average-real-gdp-per-capita-across-countries-and-regions}}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[t]{0.495\textwidth}
+        \centering
+        \includegraphics[width=1\linewidth]{images/Libro-img009.png}
+        \caption{Migliora la ridistribuzione della ricchezza e l'istruzione.
+        Credits: \raggedright\url{https://ourworldindata.org/global-education\#school-enrollment-and-attendance}}
+    \end{subfigure}
+
+    \vspace{1em}
+
+    \begin{subfigure}[t]{0.495\textwidth}
+        \centering
+        \includegraphics[width=1\linewidth]{images/Libro-img012.png}
+        \caption{Sempre più persone vivono in governi democratici.
+        Credits: \raggedright\url{https://ourworldindata.org/grapher/world-pop-by-political-regime}}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[t]{0.495\textwidth}
+        \centering
+        \includegraphics[width=1\linewidth]{images/Libro-img011.png}
+        \caption{La settimana lavorativa è scesa da 60 a 40 ore con più diritti.
+        Credits: \raggedright\url{https://ourworldindata.org/grapher/work-hours-per-week?time=1870..2000\&country=BEL+FRA+ITA+CHE+USA}}
+    \end{subfigure}
+\end{figure}
 
 \clearpage\section{Conclusione}
 
